Changelog
=========

5.2-dev - (unreleased)
----------------------
* Bug fix: remove entry point to symlink maildrop
  [tiberich refs #5382]
* Bug fix: remove patch for TinyMce's getContentType, no longer needed
  in latest version of Products.TinyMCE
  [tiberich #5346]
* Bug fix: refactor saving resources on disk, due to changes in 
  Products.ResourceRegistries
  [tiberich #5346]
* Bug fix: patch validateSingleEmailAddress from CMFPlone to properly reject 
  emails which are not of proper format 
  [ichimdav #5353] 
* Upgrade Step: on a serviceWWW instance, go to the root of the Zope.
  You will be prompted to upgrade the Plone instance. You can "dry run" first
  and then, if no issues are reported, you can run the real Plone migration
  [tiberich #5346]

5.1 - (2012-07-13)
------------------
* Bug fix: cleanup warnings for jenkings [tiberich]
* Feature: added basic external method migrateRelations to be used 
  for migration of relations from one ob to another simply via python scripts.
  [demarant refs #3213]
* Bug fix: added external methods to fix the problematic unfinished
  folders from EEAFigures
  [tiberich refs #5312]
* Feature: added a manager-only @@gopdb view to enable dropping to pdb console
  [tiberich]
* Upgrade step: delete folders in eeafigures:
    - Create an external method with module name
       - Products.EEAPloneAdmin.find_empty_figure_folders
       - function name: fix_2
    - Execute it, save the output for future reference.
      [tiberich refs #5312]
* Upgrade step: in portal_types, remove Folder as allowed addable content for
  EEAFigure 
  [tiberich refs #5312]

5.0 - (2012-06-20)
------------------
* Feature: Improved unmarkcreationflag method.
  [demarant refs #5312]
* Bug fix: removed definition of is_empty
  [tiberich refs #5289]

4.25 - (2012-06-18)
-------------------
* Bug fix: patched ATContentTypes calendarsuport to accept location field
  as a tuple
  [ichimdav fixes #5284]

4.24 - (2012-06-14)
-------------------